# whisper-diarization

./: pyproject.toml
src/whisper_diarization/: pipeline.py
